--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
     "build": "rm -rf dist & parcel build"
   },
   "dependencies": {
+    "@alfalab/core-components": "^28.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "2.6.0",
+    "@parcel/transformer-sass": "2.6.2",
     "@types/node": "^17.0.39",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
-    "parcel": "^2.6.0",
+    "parcel": "^2.6.2",
     "prettier": "^2.6.2",
+    "process": "^0.11.10",
     "stylelint": "^13.13.1",
     "stylelint-declaration-block-no-ignored-properties": "^2.3.0",
     "stylelint-order": "^4.1.0",
